Created missing email action and view for Customer controller

--- a/app/views/customers/alphabetized.html.erb
+++ b/app/views/customers/alphabetized.html.erb
@@ -1,3 +1,4 @@
+<h1 class="title">Alphabetized Customers</h1>
 <div class="columns">
-  <%= render partial: "customer", collection: @customer, as: :customer %>
+  <%= render partial: "customer", collection: @alph_customer, as: :customer %>
 </div>
