--- a/app/views/customers/alphabetized.html.erb
+++ b/app/views/customers/alphabetized.html.erb
@@ -1,3 +1,11 @@
+<nav class="navbar" role="navigation" aria-label="main navigation">
+  <div class="navbar-menu">
+    <div class="navbar-start">
+      <%= link_to 'All Customers', root_path, class: "navbar-item" %>
+      <%= link_to 'Missing Email Customers', customers_missing_email_path, class: "navbar-item" %>
+    </div>
+  </div>
+</nav>
 <h1 class="title">Alphabetized Customers</h1>
 <div class="columns">
   <%= render partial: "customer", collection: @alph_customer, as: :customer %>
